--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "./node_modules/.bin/mocha tests/**/*.test.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint:pug": "pug-lint .",
     "lint:eslint": "eslint --format codeframe ."
   },
@@ -17,10 +17,14 @@
     "pug": "^3.0.2"
   },
   "dependencies": {
+    "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "eslint": "^7.25.0",
+    "mocha": "^9.0.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "sinon": "^11.1.1",
+    "sinon-chai": "^3.7.0"
   }
 }
